--- a/discord/package.json
+++ b/discord/package.json
@@ -25,12 +25,14 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.17.1-beta.1",
     "crc-32": "^1.2.0",
-    "discord.js": "^13.2.0"
+    "discord.js": "^13.2.0",
+    "dotenv": "^10.0.0"
   }
 }
