--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,10 @@
     "@project-serum/anchor": "^0.17.1-beta.1",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-react": "^0.12.5",
+    "@solana/wallet-adapter-react-ui": "^0.5.1",
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "antd": "^4.16.13",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
