--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-react-ui": "^0.5.1",
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "antd": "^4.16.13",
+    "crc-32": "^1.2.0",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
