--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ahoy/app",
+  "name": "@soloha/app",
   "private": true,
   "author": "Matthew Callens <callensmatt@gmail.com>",
   "scripts": {
@@ -30,22 +30,5 @@
     "next-transpile-modules": "^8.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   }
 }
