--- a/discord/package.json
+++ b/discord/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@soloha/captain",
+  "name": "@soloha/espresso",
   "version": "0.1.0",
   "description": "Discord bot for the Soloha program",
   "main": "./build/index.js",
@@ -8,7 +8,7 @@
   "keywords": [
     "solana",
     "soloha",
-    "captain",
+    "espresso",
     "discord",
     "anchor",
     "gm"
