--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "crc-32": "^1.2.0",
     "dayjs": "^1.10.7",
     "next": "^11.1.2",
+    "next-with-less": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -27,6 +28,7 @@
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "babel-plugin-import": "^1.13.3",
     "next-transpile-modules": "^8.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
