--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run clean && next build",
     "clean": "rm -rf .next/",
-    "lint": "eslint src/ && prettier . --check",
+    "lint": "next lint && prettier . --check",
     "fmt": "prettier . --write",
     "start": "next dev"
   },
@@ -29,6 +29,8 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "babel-plugin-import": "^1.13.3",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "next-transpile-modules": "^8.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
