--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "crc-32": "^1.2.0",
     "dayjs": "^1.10.7",
     "next": "^11.1.2",
+    "next-auth": "^3.29.0",
     "next-with-less": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
