--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "idl": "npm run idl:app && npm run idl:discord",
-    "idl:app": "cp target/types/soloha.ts app/lib",
-    "idl:discord": "cp target/types/soloha.ts discord/src"
+    "idl:app": "cp target/types/soloha.ts app/lib/idl && cp target/idl/soloha.json app/lib/idl",
+    "idl:discord": "cp target/types/soloha.ts discord/src/idl && cp target/idl/soloha.json discord/src/idl"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.17.1-beta.2",
