--- a/discord/package.json
+++ b/discord/package.json
@@ -23,7 +23,13 @@
   "homepage": "https://github.com/callensm/soloha/tree/master#readme",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src --ext .ts && prettier src/ --check"
+    "lint": "eslint src --ext .ts --ignore-path ../.eslintignore && prettier src/ --check --ignore-path ../.prettierignore"
+  },
+  "dependencies": {
+    "@project-serum/anchor": "^0.18.0",
+    "crc-32": "^1.2.0",
+    "discord.js": "^13.2.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
@@ -33,11 +39,5 @@
     "prettier": "^2.4.1",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
-  },
-  "dependencies": {
-    "@project-serum/anchor": "^0.17.1-beta.1",
-    "crc-32": "^1.2.0",
-    "discord.js": "^13.2.0",
-    "dotenv": "^10.0.0"
   }
 }
