--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "idl:discord": "cp target/types/soloha.ts discord/src/idl && cp target/idl/soloha.json discord/src/idl"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.17.1-beta.2",
+    "@project-serum/anchor": "^0.18.0",
     "crc-32": "^1.2.0"
   },
   "devDependencies": {
