--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,7 @@ env:
   NODE_VERSION: 16
 
 jobs:
-  lint_app:
+  lint_ts:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,32 +22,14 @@ jobs:
           cache: npm
 
       - name: Install Dependencies
-        working-directory: ./app
+
         run: npm ci
 
-      - name: ESLint & Prettier
-        working-directory: ./app
-        run: npm run lint
+      - name: Lint
+        run: npm run lint:app && npm run lint:discord
 
-  lint_discord:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Setup Nodejs
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: npm
-
-      - name: Install Dependencies
-        working-directory: ./discord
-        run: npm ci
-
-      - name: ESLint & Prettier
-        working-directory: ./discord
-        run: npm run lint
+      - name: Format Check
+        run: npm run fmt
 
   lint_program:
     runs-on: ubuntu-latest
