--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,11 @@
   "scripts": {
     "build": "npm run clean && next build",
     "clean": "rm -rf .next/",
-    "lint": "next lint --ignore-path ../.eslintignore && prettier . --check --ignore-path ../.prettierignore",
-    "fmt": "prettier . --write --ignore-path ../.prettierignore",
     "start": "next dev"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@project-serum/anchor": "^0.17.1-beta.1",
+    "@project-serum/anchor": "^0.18.0",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-react": "^0.12.5",
     "@solana/wallet-adapter-react-ui": "^0.5.1",
@@ -30,10 +28,8 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "next-transpile-modules": "^8.0.0",
-    "prettier": "^2.4.1",
     "typescript": "^4.4.4"
   }
 }
