--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "soloha",
   "private": true,
   "scripts": {
+    "fmt": "prettier app/ discord/ tests/ migrations/ --check",
+    "fmt:fix": "prettier app/ discord/ tests/ migrations/ --write",
     "idl": "npm run idl:app && npm run idl:discord",
     "idl:app": "cp target/types/soloha.ts app/lib/idl && cp target/idl/soloha.json app/lib/idl",
-    "idl:discord": "cp target/types/soloha.ts discord/src/idl && cp target/idl/soloha.json discord/src/idl"
+    "idl:discord": "cp target/types/soloha.ts discord/src/idl && cp target/idl/soloha.json discord/src/idl",
+    "lint:app": "eslint app/ --config app/.eslintrc",
+    "lint:discord": "eslint discord/ --ext .ts --config discord/.eslintrc"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.18.0",
@@ -14,9 +18,13 @@
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^8.1.0",
     "mocha": "^9.0.3",
+    "prettier": "^2.4.1",
     "ts-mocha": "^8.0.0",
     "typescript": "^4.3.5"
   }
