--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "npm run clean && next build",
     "clean": "rm -rf .next/",
+    "lint": "next lint",
     "start": "next dev"
   },
   "dependencies": {
