--- a/discord/package.json
+++ b/discord/package.json
@@ -1,29 +1,10 @@
 {
   "name": "@soloha/espresso",
-  "version": "0.1.0",
-  "description": "Discord bot for the Soloha program",
-  "main": "./build/index.js",
+  "private": true,
   "author": "Matthew Callens <callensmatt@gmail.com>",
-  "license": "../LICENSE",
-  "keywords": [
-    "solana",
-    "soloha",
-    "espresso",
-    "discord",
-    "anchor",
-    "gm"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/callensm/soloha.git#master"
-  },
-  "bugs": {
-    "url": "https://github.com/callensm/soloha/issues"
-  },
-  "homepage": "https://github.com/callensm/soloha/tree/master#readme",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src --ext .ts --ignore-path ../.eslintignore && prettier src/ --check --ignore-path ../.prettierignore"
+    "lint": "eslint src --ext .ts"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.18.0",
@@ -33,6 +14,9 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
