--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "fmt:fix": "prettier app/ discord/ tests/ migrations/ --write",
     "idl": "npm run idl:app && npm run idl:discord",
     "idl:app": "cp target/types/soloha.ts app/lib/idl && cp target/idl/soloha.json app/lib/idl",
-    "idl:discord": "cp target/types/soloha.ts discord/src/idl && cp target/idl/soloha.json discord/src/idl",
-    "lint:app": "cd app && npx next lint --ignore-path ../.eslintignore",
-    "lint:discord": "eslint discord/ --ext .ts --config discord/.eslintrc"
+    "idl:discord": "cp target/types/soloha.ts discord/src/idl && cp target/idl/soloha.json discord/src/idl"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.18.0",
@@ -18,11 +16,8 @@
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.1.0",
     "mocha": "^9.0.3",
     "prettier": "^2.4.1",
     "ts-mocha": "^8.0.0",
