--- a/discord/package.json
+++ b/discord/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@soloha/espresso",
   "private": true,
+  "version": "0.1.0",
   "author": "Matthew Callens <callensmatt@gmail.com>",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.18.0",
@@ -17,7 +19,6 @@
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
-    "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
 }
